--- a/public/index.html
+++ b/public/index.html
@@ -70,16 +70,10 @@
       gtag('config', 'G-JRZ76PCM86');
     </script>
     <!--google search console-->
-
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag('js', new Date());
-
-      gtag('config', 'UA-145096724-2');
-    </script>
+    <meta
+      name="google-site-verification"
+      content="8hiZPxPAPxquo8xtvNL3dsRb-wu7MmyX65INIS3stHI"
+    />
 
     <div id="root"></div>
     <!--
